# iconspy

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  quickstart.ipynb  search.html  searchindex.js  setup.py
.github/workflows/: run_tests.yml  sphinx_docs.yml
_sources/: api.rst.txt  installation.rst.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.ipynb
examples/: quickstart.ipynb
iconspy/: __init__.py  balltree.py  core.py  kdtree.py  utils.py
iconspy/tests/: conftest.py  test_balltree.py  test_core.py
